Add the rest of the pages.

--- a/Week4/web/index.xhtml
+++ b/Week4/web/index.xhtml
@@ -36,16 +36,19 @@
                 <h:form>
                     <ul>
                         <li>
-                            Go to <h:commandLink value="studentSkills page" action="goToSkillsPage"/>
-                        </li>
-                        <li>
                             Go to <h:commandLink value="students page" action="goToStudentsPage"/>
                         </li>
                         <li>
                             Go to <h:commandLink value="projects page" action="goToProjectsPage"/>
                         </li>
                         <li>
-                            Go to <h:commandLink value="studentSkills" action="goToStudentsSkills"/>
+                            Go to <h:commandLink value="skills page" action="goToSkillsPage"/>
+                        </li>
+                        <li>
+                            Go to <h:commandLink value="students skills page" action="goToStudentsSkills"/>
+                        </li>
+                        <li>
+                            Go to <h:commandLink value="projects skills page" action="goToProjectsSkills"/>
                         </li>
                     </ul>
                 </h:form>
