--- a/Week4/web/projects.xhtml
+++ b/Week4/web/projects.xhtml
@@ -41,6 +41,10 @@
             }
         </script>
 
+        <h:outputStylesheet name="footer.css" library="css"/>
+        <h:outputStylesheet name="table.css" library="css"/>
+
+
     </h:head>
 
     <h:body>
@@ -56,22 +60,52 @@
                 <p:growl id="growl" life="2000"/>
 
                 <p:dataTable id="projects" var="project" value="#{projectBean.projects}" rowKey="#{project.id}"
-                             selection="#{projectBean.selectedProject}" selectionMode="single">
+                             selection="#{projectBean.selectedProject}" selectionMode="single" editable="true">
 
-                    <!--<p:column headerText="Id">-->
-                        <!--<h:outputText value="#{project.id}"/>-->
-                    <!--</p:column>-->
+                    <p:ajax event="rowEdit" listener="#{projectBean.onProjectEditSave}"
+                            update=":projectTableForm:growl"/>
+                    <p:ajax event="rowEditCancel" listener="#{projectBean.onProjectEditCancel}"
+                            update=":projectTableForm:growl"/>
 
-                    <p:column headerText="Name">
-                        <h:outputText value="#{project.name}"/>
+                    <p:column headerText="Name" sortBy="#{project.name}" filterBy="#{project.name}"
+                              filterMatchMode="contains">
+
+                        <p:cellEditor>
+                            <f:facet name="output">
+                                <h:outputText value="#{project.name}"/>
+                            </f:facet>
+                            <f:facet name="input">
+                                <p:inputText id="nameInput" value="#{project.name}" style="width: 100%"/>
+                            </f:facet>
+                        </p:cellEditor>
+
                     </p:column>
 
                     <p:column headerText="Description">
-                        <h:outputText value="#{project.description}"/>
+                        <p:cellEditor>
+                            <f:facet name="output">
+                                <h:outputText value="#{project.description}"/>
+                            </f:facet>
+                            <f:facet name="input">
+                                <p:inputText id="description" value="#{project.description}" style="width: 100%"/>
+                            </f:facet>
+                        </p:cellEditor>
                     </p:column>
 
-                    <p:column headerText="Capacity">
-                        <h:outputText value="#{project.capacity}"/>
+                    <p:column headerText="Capacity" sortBy="#{project.capacity}" filterBy="#{project.capacity}"
+                              filterMatchMode="contains">
+                        <p:cellEditor>
+                            <f:facet name="output">
+                                <h:outputText value="#{project.capacity}"/>
+                            </f:facet>
+                            <f:facet name="input">
+                                <p:inputText id="capacity" value="#{project.capacity}" style="width: 100%"/>
+                            </f:facet>
+                        </p:cellEditor>
+                    </p:column>
+
+                    <p:column style="width: 32px">
+                        <p:rowEditor/>
                     </p:column>
 
                 </p:dataTable>
@@ -86,16 +120,16 @@
                     <h:panelGrid columns="2" cellpadding="5">
                         <h:outputLabel for="projectName" value="Name:"/>
                         <p:inputText id="projectName" value="#{projectBean.newProject.name}" rendered="true"
-                                     label="Name"></p:inputText>
+                                     label="Name"/>
 
                         <h:outputLabel for="projectDescription" value="Description:"/>
                         <p:inputText id="projectDescription" value="#{projectBean.newProject.description}"
                                      rendered="true"
-                                     label="Description"></p:inputText>
+                                     label="Description"/>
 
                         <h:outputLabel for="projectCapacity" value="Capacity:"/>
                         <p:inputText id="projectCapacity" value="#{projectBean.newProject.capacity}" rendered="true"
-                                     label="Name"></p:inputText>
+                                     label="Name"/>
 
 
                         <f:facet name="footer">
@@ -107,6 +141,10 @@
                 </p:dialog>
             </h:form>
         </div>
+
+        <ui:insert name="footer">
+            <ui:include src="WEB-INF/templates/footer.xhtml"/>
+        </ui:insert>
 
     </h:body>
 </html>
