Add Users on Page Feature. Add functionality for MenuBar. Add I18N feature. Encapsulate the header into a component

--- a/Week4/web/index.xhtml
+++ b/Week4/web/index.xhtml
@@ -27,7 +27,7 @@
     <h:body>
         <div>
             <h3 class="center-align">
-                #{message.home_welcome}
+                #{msg['home_welcome']}
             </h3>
         </div>
 
@@ -36,19 +36,21 @@
                 <h:form>
                     <ul>
                         <li>
-                            Go to <h:commandLink value="students page" action="goToStudentsPage"/>
+                            #{msg.go_to} <h:commandLink value="#{msg.students_page}" action="goToStudentsPage"/>
                         </li>
                         <li>
-                            Go to <h:commandLink value="projects page" action="goToProjectsPage"/>
+                            #{msg.go_to} <h:commandLink value="#{msg.projects_page}" action="goToProjectsPage"/>
                         </li>
                         <li>
-                            Go to <h:commandLink value="skills page" action="goToSkillsPage"/>
+                            #{msg.go_to} <h:commandLink value="#{msg.skills_page}" action="goToSkillsPage"/>
                         </li>
                         <li>
-                            Go to <h:commandLink value="students skills page" action="goToStudentsSkills"/>
+                            #{msg.go_to} <h:commandLink value="#{msg.students_skills_page}"
+                                                        action="goToStudentsSkills"/>
                         </li>
                         <li>
-                            Go to <h:commandLink value="projects skills page" action="goToProjectsSkills"/>
+                            #{msg.go_to} <h:commandLink value="#{msg.projects_skills_page}"
+                                                        action="goToProjectsSkills"/>
                         </li>
                     </ul>
                 </h:form>
